--- a/public/locales/pl/aboutMe.json
+++ b/public/locales/pl/aboutMe.json
@@ -98,7 +98,7 @@
 
   "contact": {
     "heading": "Skontaktuj się z nami!",
-    "intro": "Chcesz dodać magii do swojego wydarzenia dzięki naszym usługom? Skontaktuj się z nami już dziś, aby otrzymać spersonalizowaną ofertę!",
+    "intro": "Chcesz dodać magii do swojego wydarzenia dzięki naszym atrakcjom? Skontaktuj się z nami już dziś, aby otrzymać spersonalizowaną ofertę!",
     "ctaButton": "Skontaktuj się z nami"
   },
   "footer": {
